TestCases/Errors/range_value/observations/spr_06_obs.spm
 obs   5-14   0.004                
 obs   5-15   0.005                
 obs   2-19   0.000262605042016807 
 obs   3-19   0.0019047619047619   
 obs   1-20   0.0124628822633629   
 obs   2-20   0.00831374624243894  
 obs   3-20   0.00546560846560847  
 obs   4-20   0.00380952380952381  
 obs   1-21   0.0106136686558681   
 obs   3-21   0.00205357142857143  
 obs   2-22   0.00380952380952381  
 obs   3-22   0.00380952380952381  

error_value  5-14 0
error_value  5-15 0
error_value  2-19 0
error_value  3-19 0
error_value  1-20 0
error_value  2-20 0
error_value  3-20 0
error_value  4-20 0
error_value  1-21 0
error_value  3-21 0
error_value  2-22 0
error_value  3-22 0
